# T7

./: CMakeLists.txt  KeyboardSimulation.cpp  KeyboardSimulation.h  PedalManager.cpp  PedalManager.h  README.md  XT7Main.cpp  XT7Main.h
CMake/: FindHidapi.cmake
Resources/Lokalize/: 0_getstrings.sh  2_makemo.sh  index.lokalize
Resources/Lokalize/fr/: T7.po
Resources/UI/: T7.pjd  t7app.cpp  t7app.h  t7main.cpp  t7main.h
UI/: T7.pjd  t7app.cpp  t7main.cpp  t7main.h
